Update link in index.html and add .gitignore file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>sas992203@gmail.com</p>
         <p>085748006087</p>
         <p>
-            <a href="index.html">Selengkapnya &rarr;</a>
+            <a href="https://bert093.github.io/Portofolio-Website/">Selengkapnya &rarr;</a>
         </p>
     </div>
 </body>
